WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100602
All tests crash in WebKit1 mode
https://bugs.webkit.org/show_bug.cgi?id=100602
Summary
All tests crash in WebKit1 mode
Alexey Proskuryakov
Reported
2012-10-27 22:07:58 PDT
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x0000000109d8bb78 WebCore::platformStrategies() + 72 (PlatformStrategies.cpp:38) 1 com.apple.WebCore 0x000000010a0a49a3 WebCore::resourceLoadScheduler() + 195 (ResourceLoadScheduler.cpp:95) 2 com.apple.WebKit 0x00000001085f2a5a +[WebView(WebPrivate) _setLoadResourcesSerially:] + 26 (WebView.mm:3032) 3 DumpRenderTree 0x00000001073c025e TestRunner::setSerializeHTTPLoads(bool) + 46 (TestRunnerMac.mm:1107) 4 DumpRenderTree 0x00000001073946bb resetDefaultsToConsistentValues() + 2779 (DumpRenderTree.mm:687) 5 DumpRenderTree 0x0000000107394fad setDefaultsToConsistentValuesForTesting() + 13 (DumpRenderTree.mm:697) 6 DumpRenderTree 0x000000010738f8ff prepareConsistentTestingEnvironment() + 47 (DumpRenderTree.mm:850) 7 DumpRenderTree 0x000000010738f433 dumpRenderTree(int, char const**) + 35 (DumpRenderTree.mm:862) 8 DumpRenderTree 0x00000001073918e9 main + 105 (DumpRenderTree.mm:925) s_platformStrategies is still null here.
Attachments
proposed fix
(2.40 KB, patch)
2012-10-27 22:54 PDT
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-10-27 22:10:55 PDT
Actually, it's a crash in release builds.
Filip Pizlo
Comment 2
2012-10-27 22:49:26 PDT
(In reply to
comment #1
)
> Actually, it's a crash in release builds.
I also get the crash in debug.
Alexey Proskuryakov
Comment 3
2012-10-27 22:54:04 PDT
Created
attachment 171123
[details]
proposed fix
Alexey Proskuryakov
Comment 4
2012-10-27 22:55:00 PDT
> I also get the crash in debug.
What I meant to say was: not only it is an assertion failure in debug as originally reported, but a crash in release.
Alexey Proskuryakov
Comment 5
2012-10-27 23:11:31 PDT
Committed <
http://trac.webkit.org/changeset/132744
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug