        All tests crash in WebKit1 mode         https://bugs.webkit.org/show_bug.cgi?id=100602

Reviewed by Sam Weinig.

        * WebView/WebView.mm: (+[WebView _setLoadResourcesSerially:]): Resource load
        scheduler is created via a strategy, so strategies need to be initialized before
        using it.



Canonical link: https://commits.webkit.org/118647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132744 268f45cc-cd09-0410-ab3c-d52691b4dbfc